ISSUE 227 ts-icon-add icon align in the middle

--- a/src/runtime/less/ts-icons.less
+++ b/src/runtime/less/ts-icons.less
@@ -114,7 +114,6 @@ i {
 }
 .ts-icon-add:before {
 	content: "&";
-	left: 1px;
 }
 .ts-icon-close:before {
 	content: "*";
